src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> parsed
Rule 1     parsed -> <empty>
Rule 2     parsed -> parsed stmt
Rule 3     stmt -> VARIABLE EQUAL expr
Rule 4     stmt -> BUILDIN EQUAL expr
Rule 5     stmt -> expr
Rule 6     stmt -> FOR VARIABLE IN VARIABLE stmt
Rule 7     stmt -> IF LPAREN expr RPAREN stmt
Rule 8     stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 9     stmt -> WHILE LPAREN expr RPAREN stmt
Rule 10    stmt -> LBRACE stmtlist RBRACE
Rule 11    stmtlist -> stmt
Rule 12    stmtlist -> stmtlist stmt
Rule 13    expr -> NUMBER
Rule 14    expr -> STRING
Rule 15    expr -> LBRACKET RBRACKET
Rule 16    expr -> VARIABLE
Rule 17    expr -> BUILDIN
Rule 18    expr -> expr PLUS expr
Rule 19    expr -> expr MINUS expr
Rule 20    expr -> expr TIMES expr
Rule 21    expr -> expr DIVIDE expr
Rule 22    expr -> expr GT expr
Rule 23    expr -> expr GE expr
Rule 24    expr -> expr LT expr
Rule 25    expr -> expr LE expr
Rule 26    expr -> expr EQ expr
Rule 27    expr -> expr NE expr
Rule 28    expr -> expr AND expr
Rule 29    expr -> expr OR expr
Rule 30    expr -> expr MOD expr
Rule 31    expr -> LPAREN expr RPAREN
Rule 32    expr -> BUILDIN LPAREN RPAREN
Rule 33    expr -> BUILDIN LPAREN expr RPAREN
Rule 34    expr -> BUILDIN LPAREN expr COMMA expr RPAREN
Rule 35    expr -> BUILDIN LPAREN expr COMMA expr COMMA expr RPAREN
Rule 36    expr -> BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN
Rule 37    expr -> BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN

Terminals, with rules where they appear

AND                  : 28
BUILDIN              : 4 17 32 33 34 35 36 37
COMMA                : 34 35 35 36 36 36 37 37 37 37
DIVIDE               : 21
ELSE                 : 8
EQ                   : 26
EQUAL                : 3 4
FOR                  : 6
GE                   : 23
GT                   : 22
IF                   : 7 8
IN                   : 6
LBRACE               : 10
LBRACKET             : 15
LE                   : 25
LPAREN               : 7 8 9 31 32 33 34 35 36 37
LT                   : 24
MINUS                : 19
MOD                  : 30
NE                   : 27
NUMBER               : 13
OR                   : 29
PLUS                 : 18
RBRACE               : 10
RBRACKET             : 15
RPAREN               : 7 8 9 31 32 33 34 35 36 37
STRING               : 14
TIMES                : 20
VARIABLE             : 3 6 6 16
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

expr                 : 3 4 5 7 8 9 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 33 34 34 35 35 35 36 36 36 36 37 37 37 37 37
parsed               : 2 0
stmt                 : 2 6 7 8 8 9 11 12
stmtlist             : 10 12

Parsing method: LALR

state 0

    (0) S' -> . parsed
    (1) parsed -> .
    (2) parsed -> . parsed stmt

    VARIABLE        reduce using rule 1 (parsed -> .)
    BUILDIN         reduce using rule 1 (parsed -> .)
    FOR             reduce using rule 1 (parsed -> .)
    IF              reduce using rule 1 (parsed -> .)
    WHILE           reduce using rule 1 (parsed -> .)
    LBRACE          reduce using rule 1 (parsed -> .)
    NUMBER          reduce using rule 1 (parsed -> .)
    STRING          reduce using rule 1 (parsed -> .)
    LBRACKET        reduce using rule 1 (parsed -> .)
    LPAREN          reduce using rule 1 (parsed -> .)
    $end            reduce using rule 1 (parsed -> .)

    parsed                         shift and go to state 1

state 1

    (0) S' -> parsed .
    (2) parsed -> parsed . stmt
    (3) stmt -> . VARIABLE EQUAL expr
    (4) stmt -> . BUILDIN EQUAL expr
    (5) stmt -> . expr
    (6) stmt -> . FOR VARIABLE IN VARIABLE stmt
    (7) stmt -> . IF LPAREN expr RPAREN stmt
    (8) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (9) stmt -> . WHILE LPAREN expr RPAREN stmt
    (10) stmt -> . LBRACE stmtlist RBRACE
    (13) expr -> . NUMBER
    (14) expr -> . STRING
    (15) expr -> . LBRACKET RBRACKET
    (16) expr -> . VARIABLE
    (17) expr -> . BUILDIN
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr EQ expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr MOD expr
    (31) expr -> . LPAREN expr RPAREN
    (32) expr -> . BUILDIN LPAREN RPAREN
    (33) expr -> . BUILDIN LPAREN expr RPAREN
    (34) expr -> . BUILDIN LPAREN expr COMMA expr RPAREN
    (35) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr RPAREN
    (36) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN
    (37) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN

    VARIABLE        shift and go to state 10
    BUILDIN         shift and go to state 6
    FOR             shift and go to state 7
    IF              shift and go to state 11
    WHILE           shift and go to state 4
    LBRACE          shift and go to state 12
    NUMBER          shift and go to state 2
    STRING          shift and go to state 5
    LBRACKET        shift and go to state 3
    LPAREN          shift and go to state 9

    expr                           shift and go to state 13
    stmt                           shift and go to state 8

state 2

    (13) expr -> NUMBER .

    PLUS            reduce using rule 13 (expr -> NUMBER .)
    MINUS           reduce using rule 13 (expr -> NUMBER .)
    TIMES           reduce using rule 13 (expr -> NUMBER .)
    DIVIDE          reduce using rule 13 (expr -> NUMBER .)
    GT              reduce using rule 13 (expr -> NUMBER .)
    GE              reduce using rule 13 (expr -> NUMBER .)
    LT              reduce using rule 13 (expr -> NUMBER .)
    LE              reduce using rule 13 (expr -> NUMBER .)
    EQ              reduce using rule 13 (expr -> NUMBER .)
    NE              reduce using rule 13 (expr -> NUMBER .)
    AND             reduce using rule 13 (expr -> NUMBER .)
    OR              reduce using rule 13 (expr -> NUMBER .)
    MOD             reduce using rule 13 (expr -> NUMBER .)
    VARIABLE        reduce using rule 13 (expr -> NUMBER .)
    BUILDIN         reduce using rule 13 (expr -> NUMBER .)
    FOR             reduce using rule 13 (expr -> NUMBER .)
    IF              reduce using rule 13 (expr -> NUMBER .)
    WHILE           reduce using rule 13 (expr -> NUMBER .)
    LBRACE          reduce using rule 13 (expr -> NUMBER .)
    NUMBER          reduce using rule 13 (expr -> NUMBER .)
    STRING          reduce using rule 13 (expr -> NUMBER .)
    LBRACKET        reduce using rule 13 (expr -> NUMBER .)
    LPAREN          reduce using rule 13 (expr -> NUMBER .)
    $end            reduce using rule 13 (expr -> NUMBER .)
    RPAREN          reduce using rule 13 (expr -> NUMBER .)
    RBRACE          reduce using rule 13 (expr -> NUMBER .)
    ELSE            reduce using rule 13 (expr -> NUMBER .)
    COMMA           reduce using rule 13 (expr -> NUMBER .)


state 3

    (15) expr -> LBRACKET . RBRACKET

    RBRACKET        shift and go to state 14


state 4

    (9) stmt -> WHILE . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 15


state 5

    (14) expr -> STRING .

    PLUS            reduce using rule 14 (expr -> STRING .)
    MINUS           reduce using rule 14 (expr -> STRING .)
    TIMES           reduce using rule 14 (expr -> STRING .)
    DIVIDE          reduce using rule 14 (expr -> STRING .)
    GT              reduce using rule 14 (expr -> STRING .)
    GE              reduce using rule 14 (expr -> STRING .)
    LT              reduce using rule 14 (expr -> STRING .)
    LE              reduce using rule 14 (expr -> STRING .)
    EQ              reduce using rule 14 (expr -> STRING .)
    NE              reduce using rule 14 (expr -> STRING .)
    AND             reduce using rule 14 (expr -> STRING .)
    OR              reduce using rule 14 (expr -> STRING .)
    MOD             reduce using rule 14 (expr -> STRING .)
    VARIABLE        reduce using rule 14 (expr -> STRING .)
    BUILDIN         reduce using rule 14 (expr -> STRING .)
    FOR             reduce using rule 14 (expr -> STRING .)
    IF              reduce using rule 14 (expr -> STRING .)
    WHILE           reduce using rule 14 (expr -> STRING .)
    LBRACE          reduce using rule 14 (expr -> STRING .)
    NUMBER          reduce using rule 14 (expr -> STRING .)
    STRING          reduce using rule 14 (expr -> STRING .)
    LBRACKET        reduce using rule 14 (expr -> STRING .)
    LPAREN          reduce using rule 14 (expr -> STRING .)
    $end            reduce using rule 14 (expr -> STRING .)
    RPAREN          reduce using rule 14 (expr -> STRING .)
    RBRACE          reduce using rule 14 (expr -> STRING .)
    ELSE            reduce using rule 14 (expr -> STRING .)
    COMMA           reduce using rule 14 (expr -> STRING .)


state 6

    (4) stmt -> BUILDIN . EQUAL expr
    (17) expr -> BUILDIN .
    (32) expr -> BUILDIN . LPAREN RPAREN
    (33) expr -> BUILDIN . LPAREN expr RPAREN
    (34) expr -> BUILDIN . LPAREN expr COMMA expr RPAREN
    (35) expr -> BUILDIN . LPAREN expr COMMA expr COMMA expr RPAREN
    (36) expr -> BUILDIN . LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN
    (37) expr -> BUILDIN . LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    EQUAL           shift and go to state 16
    PLUS            reduce using rule 17 (expr -> BUILDIN .)
    MINUS           reduce using rule 17 (expr -> BUILDIN .)
    TIMES           reduce using rule 17 (expr -> BUILDIN .)
    DIVIDE          reduce using rule 17 (expr -> BUILDIN .)
    GT              reduce using rule 17 (expr -> BUILDIN .)
    GE              reduce using rule 17 (expr -> BUILDIN .)
    LT              reduce using rule 17 (expr -> BUILDIN .)
    LE              reduce using rule 17 (expr -> BUILDIN .)
    EQ              reduce using rule 17 (expr -> BUILDIN .)
    NE              reduce using rule 17 (expr -> BUILDIN .)
    AND             reduce using rule 17 (expr -> BUILDIN .)
    OR              reduce using rule 17 (expr -> BUILDIN .)
    MOD             reduce using rule 17 (expr -> BUILDIN .)
    VARIABLE        reduce using rule 17 (expr -> BUILDIN .)
    BUILDIN         reduce using rule 17 (expr -> BUILDIN .)
    FOR             reduce using rule 17 (expr -> BUILDIN .)
    IF              reduce using rule 17 (expr -> BUILDIN .)
    WHILE           reduce using rule 17 (expr -> BUILDIN .)
    LBRACE          reduce using rule 17 (expr -> BUILDIN .)
    NUMBER          reduce using rule 17 (expr -> BUILDIN .)
    STRING          reduce using rule 17 (expr -> BUILDIN .)
    LBRACKET        reduce using rule 17 (expr -> BUILDIN .)
    $end            reduce using rule 17 (expr -> BUILDIN .)
    RBRACE          reduce using rule 17 (expr -> BUILDIN .)
    ELSE            reduce using rule 17 (expr -> BUILDIN .)
    LPAREN          shift and go to state 17

  ! LPAREN          [ reduce using rule 17 (expr -> BUILDIN .) ]


state 7

    (6) stmt -> FOR . VARIABLE IN VARIABLE stmt

    VARIABLE        shift and go to state 18


state 8

    (2) parsed -> parsed stmt .

    VARIABLE        reduce using rule 2 (parsed -> parsed stmt .)
    BUILDIN         reduce using rule 2 (parsed -> parsed stmt .)
    FOR             reduce using rule 2 (parsed -> parsed stmt .)
    IF              reduce using rule 2 (parsed -> parsed stmt .)
    WHILE           reduce using rule 2 (parsed -> parsed stmt .)
    LBRACE          reduce using rule 2 (parsed -> parsed stmt .)
    NUMBER          reduce using rule 2 (parsed -> parsed stmt .)
    STRING          reduce using rule 2 (parsed -> parsed stmt .)
    LBRACKET        reduce using rule 2 (parsed -> parsed stmt .)
    LPAREN          reduce using rule 2 (parsed -> parsed stmt .)
    $end            reduce using rule 2 (parsed -> parsed stmt .)


state 9

    (31) expr -> LPAREN . expr RPAREN
    (13) expr -> . NUMBER
    (14) expr -> . STRING
    (15) expr -> . LBRACKET RBRACKET
    (16) expr -> . VARIABLE
    (17) expr -> . BUILDIN
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr EQ expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr MOD expr
    (31) expr -> . LPAREN expr RPAREN
    (32) expr -> . BUILDIN LPAREN RPAREN
    (33) expr -> . BUILDIN LPAREN expr RPAREN
    (34) expr -> . BUILDIN LPAREN expr COMMA expr RPAREN
    (35) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr RPAREN
    (36) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN
    (37) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN

    NUMBER          shift and go to state 2
    STRING          shift and go to state 5
    LBRACKET        shift and go to state 3
    VARIABLE        shift and go to state 20
    BUILDIN         shift and go to state 19
    LPAREN          shift and go to state 9

    expr                           shift and go to state 21

state 10

    (3) stmt -> VARIABLE . EQUAL expr
    (16) expr -> VARIABLE .

    EQUAL           shift and go to state 22
    PLUS            reduce using rule 16 (expr -> VARIABLE .)
    MINUS           reduce using rule 16 (expr -> VARIABLE .)
    TIMES           reduce using rule 16 (expr -> VARIABLE .)
    DIVIDE          reduce using rule 16 (expr -> VARIABLE .)
    GT              reduce using rule 16 (expr -> VARIABLE .)
    GE              reduce using rule 16 (expr -> VARIABLE .)
    LT              reduce using rule 16 (expr -> VARIABLE .)
    LE              reduce using rule 16 (expr -> VARIABLE .)
    EQ              reduce using rule 16 (expr -> VARIABLE .)
    NE              reduce using rule 16 (expr -> VARIABLE .)
    AND             reduce using rule 16 (expr -> VARIABLE .)
    OR              reduce using rule 16 (expr -> VARIABLE .)
    MOD             reduce using rule 16 (expr -> VARIABLE .)
    VARIABLE        reduce using rule 16 (expr -> VARIABLE .)
    BUILDIN         reduce using rule 16 (expr -> VARIABLE .)
    FOR             reduce using rule 16 (expr -> VARIABLE .)
    IF              reduce using rule 16 (expr -> VARIABLE .)
    WHILE           reduce using rule 16 (expr -> VARIABLE .)
    LBRACE          reduce using rule 16 (expr -> VARIABLE .)
    NUMBER          reduce using rule 16 (expr -> VARIABLE .)
    STRING          reduce using rule 16 (expr -> VARIABLE .)
    LBRACKET        reduce using rule 16 (expr -> VARIABLE .)
    LPAREN          reduce using rule 16 (expr -> VARIABLE .)
    $end            reduce using rule 16 (expr -> VARIABLE .)
    RBRACE          reduce using rule 16 (expr -> VARIABLE .)
    ELSE            reduce using rule 16 (expr -> VARIABLE .)


state 11

    (7) stmt -> IF . LPAREN expr RPAREN stmt
    (8) stmt -> IF . LPAREN expr RPAREN stmt ELSE stmt

    LPAREN          shift and go to state 23


state 12

    (10) stmt -> LBRACE . stmtlist RBRACE
    (11) stmtlist -> . stmt
    (12) stmtlist -> . stmtlist stmt
    (3) stmt -> . VARIABLE EQUAL expr
    (4) stmt -> . BUILDIN EQUAL expr
    (5) stmt -> . expr
    (6) stmt -> . FOR VARIABLE IN VARIABLE stmt
    (7) stmt -> . IF LPAREN expr RPAREN stmt
    (8) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (9) stmt -> . WHILE LPAREN expr RPAREN stmt
    (10) stmt -> . LBRACE stmtlist RBRACE
    (13) expr -> . NUMBER
    (14) expr -> . STRING
    (15) expr -> . LBRACKET RBRACKET
    (16) expr -> . VARIABLE
    (17) expr -> . BUILDIN
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr EQ expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr MOD expr
    (31) expr -> . LPAREN expr RPAREN
    (32) expr -> . BUILDIN LPAREN RPAREN
    (33) expr -> . BUILDIN LPAREN expr RPAREN
    (34) expr -> . BUILDIN LPAREN expr COMMA expr RPAREN
    (35) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr RPAREN
    (36) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN
    (37) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN

    VARIABLE        shift and go to state 10
    BUILDIN         shift and go to state 6
    FOR             shift and go to state 7
    IF              shift and go to state 11
    WHILE           shift and go to state 4
    LBRACE          shift and go to state 12
    NUMBER          shift and go to state 2
    STRING          shift and go to state 5
    LBRACKET        shift and go to state 3
    LPAREN          shift and go to state 9

    expr                           shift and go to state 13
    stmt                           shift and go to state 25
    stmtlist                       shift and go to state 24

state 13

    (5) stmt -> expr .
    (18) expr -> expr . PLUS expr
    (19) expr -> expr . MINUS expr
    (20) expr -> expr . TIMES expr
    (21) expr -> expr . DIVIDE expr
    (22) expr -> expr . GT expr
    (23) expr -> expr . GE expr
    (24) expr -> expr . LT expr
    (25) expr -> expr . LE expr
    (26) expr -> expr . EQ expr
    (27) expr -> expr . NE expr
    (28) expr -> expr . AND expr
    (29) expr -> expr . OR expr
    (30) expr -> expr . MOD expr

    RBRACE          reduce using rule 5 (stmt -> expr .)
    VARIABLE        reduce using rule 5 (stmt -> expr .)
    BUILDIN         reduce using rule 5 (stmt -> expr .)
    FOR             reduce using rule 5 (stmt -> expr .)
    IF              reduce using rule 5 (stmt -> expr .)
    WHILE           reduce using rule 5 (stmt -> expr .)
    LBRACE          reduce using rule 5 (stmt -> expr .)
    NUMBER          reduce using rule 5 (stmt -> expr .)
    STRING          reduce using rule 5 (stmt -> expr .)
    LBRACKET        reduce using rule 5 (stmt -> expr .)
    LPAREN          reduce using rule 5 (stmt -> expr .)
    $end            reduce using rule 5 (stmt -> expr .)
    ELSE            reduce using rule 5 (stmt -> expr .)
    PLUS            shift and go to state 33
    MINUS           shift and go to state 36
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 28
    GT              shift and go to state 27
    GE              shift and go to state 31
    LT              shift and go to state 29
    LE              shift and go to state 32
    EQ              shift and go to state 35
    NE              shift and go to state 37
    AND             shift and go to state 26
    OR              shift and go to state 38
    MOD             shift and go to state 34


state 14

    (15) expr -> LBRACKET RBRACKET .

    PLUS            reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    MINUS           reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    TIMES           reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    DIVIDE          reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    GT              reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    GE              reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    LT              reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    LE              reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    EQ              reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    NE              reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    AND             reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    OR              reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    MOD             reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    VARIABLE        reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    BUILDIN         reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    FOR             reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    IF              reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    WHILE           reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    LBRACE          reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    NUMBER          reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    STRING          reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    LBRACKET        reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    LPAREN          reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    $end            reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    RPAREN          reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    RBRACE          reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    ELSE            reduce using rule 15 (expr -> LBRACKET RBRACKET .)
    COMMA           reduce using rule 15 (expr -> LBRACKET RBRACKET .)


state 15

    (9) stmt -> WHILE LPAREN . expr RPAREN stmt
    (13) expr -> . NUMBER
    (14) expr -> . STRING
    (15) expr -> . LBRACKET RBRACKET
    (16) expr -> . VARIABLE
    (17) expr -> . BUILDIN
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr EQ expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr MOD expr
    (31) expr -> . LPAREN expr RPAREN
    (32) expr -> . BUILDIN LPAREN RPAREN
    (33) expr -> . BUILDIN LPAREN expr RPAREN
    (34) expr -> . BUILDIN LPAREN expr COMMA expr RPAREN
    (35) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr RPAREN
    (36) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN
    (37) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN

    NUMBER          shift and go to state 2
    STRING          shift and go to state 5
    LBRACKET        shift and go to state 3
    VARIABLE        shift and go to state 20
    BUILDIN         shift and go to state 19
    LPAREN          shift and go to state 9

    expr                           shift and go to state 39

state 16

    (4) stmt -> BUILDIN EQUAL . expr
    (13) expr -> . NUMBER
    (14) expr -> . STRING
    (15) expr -> . LBRACKET RBRACKET
    (16) expr -> . VARIABLE
    (17) expr -> . BUILDIN
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr EQ expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr MOD expr
    (31) expr -> . LPAREN expr RPAREN
    (32) expr -> . BUILDIN LPAREN RPAREN
    (33) expr -> . BUILDIN LPAREN expr RPAREN
    (34) expr -> . BUILDIN LPAREN expr COMMA expr RPAREN
    (35) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr RPAREN
    (36) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN
    (37) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN

    NUMBER          shift and go to state 2
    STRING          shift and go to state 5
    LBRACKET        shift and go to state 3
    VARIABLE        shift and go to state 20
    BUILDIN         shift and go to state 19
    LPAREN          shift and go to state 9

    expr                           shift and go to state 40

state 17

    (32) expr -> BUILDIN LPAREN . RPAREN
    (33) expr -> BUILDIN LPAREN . expr RPAREN
    (34) expr -> BUILDIN LPAREN . expr COMMA expr RPAREN
    (35) expr -> BUILDIN LPAREN . expr COMMA expr COMMA expr RPAREN
    (36) expr -> BUILDIN LPAREN . expr COMMA expr COMMA expr COMMA expr RPAREN
    (37) expr -> BUILDIN LPAREN . expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN
    (13) expr -> . NUMBER
    (14) expr -> . STRING
    (15) expr -> . LBRACKET RBRACKET
    (16) expr -> . VARIABLE
    (17) expr -> . BUILDIN
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GT expr
    (23) expr -> . expr GE expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr EQ expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr MOD expr
    (31) expr -> . LPAREN expr RPAREN
    (32) expr -> . BUILDIN LPAREN RPAREN
    (33) expr -> . BUILDIN LPAREN expr RPAREN
    (34) expr -> . BUILDIN LPAREN expr COMMA expr RPAREN
    (35) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr RPAREN
    (36) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN
    (37) expr -> . BUILDIN LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN

    RPAREN          shift and go to state 41
    NUMBER          shift and go to state 2
    STRING          shift and go to state 5
    LBRACKET        shift and go to state 3
    VARIABLE        shift and go to state 20
    BUILDIN         shift and go to state 19
    LPAREN          shift and go to state 9

    expr                           shift and go to state 42

state 18

    (6) stmt -> FOR VARIABLE . IN VARIABLE stmt

    IN              shift and go to state 43


state 19

    (17) expr -> BUILDIN .
    (32) expr -> BUILDIN . LPAREN RPAREN
    (33) expr -> BUILDIN . LPAREN expr RPAREN
    (34) expr -> BUILDIN . LPAREN expr COMMA expr RPAREN
    (35) expr -> BUILDIN . LPAREN expr COMMA expr COMMA expr RPAREN
    (36) expr -> BUILDIN . LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN
    (37) expr -> BUILDIN . LPAREN expr COMMA expr COMMA expr COMMA expr COMMA expr RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    PLUS            reduce using rule 17 (expr -> BUILDIN .)
    MINUS           reduce using rule 17 (expr -> BUILDIN .)
    TIMES           reduce using rule 17 (expr -> BUILDIN .)
    DIVIDE          reduce using rule 17 (expr -> BUILDIN .)
    GT              reduce using rule 17 (expr -> BUILDIN .)
    GE              reduce using rule 17 (expr -> BUILDIN .)
    LT              reduce using rule 17 (expr -> BUILDIN .)
    LE              reduce using rule 17 (expr -> BUILDIN .)
    EQ              reduce using rule 17 (expr -> BUILDIN .)
    NE              reduce using rule 17 (expr -> BUILDIN .)
    AND             reduce using rule 17 (expr -> BUILDIN .)
    OR              reduce using rule 17 (expr -> BUILDIN .)
    MOD             reduce using rule 17 (expr -> BUILDIN .)
    VARIABLE        reduce using rule 17 (expr -> BUILDIN .)
    BUILDIN         reduce using rule 17 (expr -> BUILDIN .)
    FOR             reduce using rule 17 (expr -> BUILDIN .)
    IF              reduce using rule 17 (expr -> BUILDIN .)
    WHILE           reduce using rule 17 (expr -> BUILDIN .)
    LBRACE          reduce using rule 17 (expr -> BUILDIN .)
    NUMBER          reduce using rule 17 (expr -> BUILDIN .)
    STRING          reduce using rule 17 (expr -> BUILDIN .)
    LBRACKET        reduce using rule 17 (expr -> BUILDIN .)
    $end            reduce using rule 17 (expr -> BUILDIN .)
    RPAREN          reduce using rule 17 (expr -> BUILDIN .)
    RBRACE          reduce using rule 17 (expr -> BUILDIN .)
    ELSE            reduce using rule 17 (expr -> BUILDIN .)
    COMMA           reduce using rule 17 (expr -> BUILDIN .)
    LPAREN          shift and go to state 17

  ! LPAREN          [ reduce using rule 17 (expr -> BUILDIN .) ]


state 20

    (16) expr -> VARIABLE .

    PLUS            reduce using rule 16 (expr -> VARIABLE .)
    MINUS           reduce using rule 16 (expr -> VARIABLE .)
    TIMES           reduce using rule 16 (expr -> VARIABLE .)
    DIVIDE          reduce using rule 16 (expr -> VARIABLE .)
    GT              reduce using rule 16 (expr -> VARIABLE .)
    GE              reduce using rule 16 (expr -> VARIABLE .)
    LT              reduce using rule 16 (expr -> VARIABLE .)
    LE              reduce using rule 16 (expr -> VARIABLE .)
    EQ              reduce using rule 16 (expr -> VARIABLE .)
    NE              reduce using rule 16 (expr -> VARIABLE .)
    AND             reduce using rule 16 (expr -> VARIABLE .)
    OR              reduce using rule 16 (expr -> VARIABLE .)
    MOD             reduce using rule 16 (expr -> VARIABLE .)
    VARIABLE        reduce using rule 16 (expr -> VARIABLE .)
    BUILDIN         reduce using rule 16 (expr -> VARIABLE .)
    FOR             reduce using rule 16 (expr -> VARIABLE .)
    IF              reduce using rule 16 (expr -> VARIABLE .)
    WHILE           reduce using rule 16 (expr -> VARIABLE .)
    LBRACE          reduce using rule 16 (expr -> VARIABLE .)
    NUMBER          reduce using rule 16 (expr -> VARIABLE .)
    STRING          reduce using rule 16 (expr -> VARIABLE .)
    LBRACKET        reduce using rule 16 (expr -> VARIABLE .)
    LPAREN          reduce using rule 16 (expr -> VARIABLE .)
    $end            reduce using rule 16 (expr -> VARIABLE .)
    RPAREN          reduce using rule 16 (expr -> VARIABLE .)
    RBRACE          reduce using rule 16 (expr -> VARIABLE .)
    ELSE            reduce using rule 16 (expr -> VARIABLE .)
    COMMA           reduce using rule 16 (expr -> VARIABLE .)


state 21
